--- a/clustering_anomaly_detection.ipynb
+++ b/clustering_anomaly_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "2b8f0108-1eae-418e-80c8-284ef2b07614",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "498af315-06c6-480b-b4b6-643167ecc45f",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "3b347592-d293-4b71-af17-8243b19e1464",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "4                  5185  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "id": "1f7671be-925e-46ce-b8cd-3f462ea7a0cf",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "8e74c063-ca29-4556-8f9a-44ddfe833d93",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "56f09c10-0973-4ff9-8289-ca6556dc187a",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "DBSCAN(eps=0.1, min_samples=40)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 7,
    "id": "8cfcbc91-32b3-4d5c-aafd-7afe511c669b",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "id": "e6365518-71dc-4bb4-9516-79aecae6adab",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "4        5185       0.063934           0.108093                 0.043455  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "f86f5de9-88ab-4cb2-a05f-a00964752319",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "id": "8c179797-1f13-492a-b016-2e76e0865272",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "<AxesSubplot:xlabel='frozen', ylabel='delicassen'>"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "cfa1030d-f784-4916-81fd-bc7d3558314c",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "<AxesSubplot:xlabel='detergents_paper', ylabel='delicassen'>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "id": "f70f697f-fb0f-4eb5-a641-b8869389aef9",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "<AxesSubplot:xlabel='detergents_paper', ylabel='frozen'>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,7 +499,7 @@
     }
    ],
    "source": [
-    "sns.scatterplot(df.detergents_paper, df.frozen, hue=df.labels)"
+    "sns.scatterplot(df.detergents_paper, df.frozen, hue=df.labels)\n"
    ]
   },
   {
@@ -973,6 +973,14 @@
    ],
    "source": [
     "sns.scatterplot(data = daily_unique, x = 'cohort_id', y='ip', hue = 'clusters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5f95f60-158f-4fa4-81f8-2679dfda24be",
+   "metadata": {},
+   "source": [
+    "# Use DBSCAN to detect anomalies in number of bedrooms and finished square feet of property"
    ]
   },
   {
